--- a/WebApp/src/app/features/Procurement/supplierassessment/supplierassessment.component.html
+++ b/WebApp/src/app/features/Procurement/supplierassessment/supplierassessment.component.html
@@ -2,7 +2,7 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <h4>Supplier Pending List for Assessment</h4>
+            <h4>Assessment Form</h4>
             <div [hidden]="formDisplay">
                 <p-tabView [activeIndex]="index" (onChange)="function($event)">
                     <p-tabPanel header="Basic Info">
@@ -711,6 +711,130 @@
 
                         </div>
                     </p-tabPanel>
+                    <p-tabPanel header="Assessment">
+                        <!--<form action="">-->
+                        <div class="col-12">
+                            <div class="p-fluid p-formgrid grid">
+                                <div class="p-fluid grid col-12 flex justify-content-start flex-wrap card-container">
+                                    <p-table [value]="criterias" dataKey="supplier_master_information_id" editMode="row">
+                                        <ng-template pTemplate="header">
+                                            <tr>
+                                                <th>SL.</th>
+                                                <th>Consideration of Criteria</th>
+                                                <!--<th>Automatic Weight</th>-->
+                                                <th>Manual  Weight</th>
+                                                <th>Actual Score</th>
+                                                <th>Comments</th>
+                                                <th style="width:8rem"></th>
+                                            </tr>
+                                        </ng-template>
+                                        <ng-template pTemplate="body" let-criteria let-editing="editing" let-ri="rowIndex">
+                                            <tr [pEditableRow]="criteria">
+                                                <td pEditableColumn>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText [(ngModel)]="criteria.assessment_criteria_id">
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{criteria.assessment_criteria_id}}
+                                                        </ng-template>
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td pEditableColumn>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText type="text" [(ngModel)]="criteria.assessment_criteria_name" required>
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{criteria.assessment_criteria_name}}
+                                                        </ng-template>
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td pEditableColumn>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText type="text" [(ngModel)]="criteria.manual_weight" required>
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{criteria.manual_weight}}
+                                                        </ng-template>
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td pEditableColumn>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText type="text" [(ngModel)]="criteria.actual_weight" required>
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{criteria.actual_weight}}
+                                                        </ng-template>
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td pEditableColumn>
+                                                    <p-cellEditor>
+                                                        <ng-template pTemplate="input">
+                                                            <input pInputText type="text" [(ngModel)]="criteria.comments" required>
+                                                        </ng-template>
+                                                        <ng-template pTemplate="output">
+                                                            {{criteria.comments}}
+                                                        </ng-template>
+                                                    </p-cellEditor>
+                                                </td>
+                                                <td style="text-align:center">
+                                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow icon="pi pi-pencil" (click)="onRowEditInit(criteria)" class="p-button-rounded p-button-text"></button>
+                                                    <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow icon="pi pi-check" (click)="onRowEditSave(criteria)" class="p-button-rounded p-button-text p-button-success p-mr-2"></button>
+                                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" (click)="onRowEditCancel(criteria, ri)" class="p-button-rounded p-button-text p-button-danger"></button>
+                                                </td>
+                                            </tr>
+                                        </ng-template>
+                                    </p-table>
+                                </div>
+                                <div class="p-fluid grid col-6 flex justify-content-end flex-wrap card-container">
+                                    <div class="col-4 mt-2 text-right">
+                                        <label for="" class=" d-md-inline-flex">Comment</label>
+                                    </div>
+                                    <div class="col-8 p-fluid text-right">
+                                        <input id="float-input p-fluid" type="text" formControlName="comment" placeholder="Please comment here" pInputText autocomplete="off">
+                                    </div>
+                                </div>
+
+                                <div class="p-fluid grid col-6 flex justify-content-end flex-wrap card-container">
+                                    <div class="col-4 mt-2 text-right">
+                                        <label for="" class=" d-md-inline-flex">Suggestion</label>
+                                    </div>
+                                    <div class="col-8 p-fluid text-right">
+                                        <input id="float-input p-fluid" type="text" formControlName="suggestion" placeholder="Please suggestion here" pInputText autocomplete="off">
+                                    </div>
+                                </div>
+
+                                <div class="p-fluid grid col-6 flex justify-content-end flex-wrap card-container">
+                                    <div class="col-4 mt-2 text-right">
+                                    </div>
+                                    <div class="col-8 p-fluid text-left">
+                                        <button type="submit" class="pi pi-times-circle risBtn risDelete mr-2" (click)="onFormReject()"> Reject</button>
+                                    </div>
+                                </div>
+                                <div class="p-fluid grid col-6 flex justify-content-end flex-wrap card-container">
+                                    <div class="col-4 mt-2 text-right">
+                                    </div>
+                                    <div class="col-8 p-fluid text-right">
+                                        <button type="submit" class="pi pi-save risBtn risAdd mr-2" (click)="onFormApprove()"> Approve</button>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <!--</form>-->
+                        <div class="flex justify-content-end pr-2">
+                            <div class="flex justify-content-end pr-2">
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
+                                <button pButton pRipple type="button" (click)="showSubmitDialog()" label="Submit" class="risBtn risView mr-2 mb-2" icon="pi pi-send"></button>
+                                <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+
+                            </div>
+                        </div>
+                    </p-tabPanel>
                 </p-tabView>
             </div>
 
@@ -719,84 +843,49 @@
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <p-table #dt1 [value]="supplierinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" responsiveLayout="scroll"
-                         [(selection)]="selectedsupplierinfo" dataKey="SupplierId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" [globalFilterFields]="['SupplierCode','LegalName']">
-                        <ng-template pTemplate="caption">
-                            <div class="flex">
-                                <span class="p-input-icon-left ml-auto">
-                                    <i class="pi pi-search"></i>
-                                    <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search by Any" />
-                                </span>
-                            </div>
-                        </ng-template>
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th style="width: 3rem">
-                                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-                                </th>
-                                <th pSortableColumn="Code">
-                                    Supplier Code
-                                    <p-columnFilter type="text" field="SupplierCode" display="menu"></p-columnFilter>
-                                    <p-sortIcon field="Code"></p-sortIcon>
-                                </th>
-                                <th pSortableColumn="LegalName">
-                                    Supplier Name
-                                    <p-columnFilter type="text" field="LegalName" display="menu"></p-columnFilter>
-                                </th>
-                                <th pSortableColumn="MobileNo">Short Name</th>
-                                <th pSortableColumn="MobileNo">Mobile No</th>
-                                <th pSortableColumn="Email">Email</th>
-                                <th>Action</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-supplierinfo let-rowData let-columns="columns">
-                            <tr [pSelectableRow]="supplierinfo">
-                                <td hidden>{{supplierinfo.SupplierId}}</td>
-                                <td>
-                                    <p-tableCheckbox [value]="supplierinfo"></p-tableCheckbox>
-                                </td>
-                                <td>{{supplierinfo.SupplierCode}}</td>
-                                <td>{{supplierinfo.LegalName}}</td>
-                                <td>{{supplierinfo.ShortName}}</td>
-                                <td>{{supplierinfo.MobileNo}}</td>
-                                <td>{{supplierinfo.Email}}</td>
-                                <td> <button class="pi pi-pencil risBtn risView mr-2" (click)="viewDocumentinfo(rowIndex,supplierinfo)"> View </button></td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
 
-                    <!--end grid display -------------->
-</div>
-
-            <form action="" [formGroup]="supplierassignForm">
-                <div class="col-12">
-                    <div class="p-fluid p-formgrid grid">
-                        <div class="field md:col-3">
-                            <label pTooltip="Department" tooltipPosition="top">Department<span class="req">*</span></label>
-                            <p-dropdown [options]="allDepartment" formControlName="department_id" [ngClass]="{ 'is-invalid': submitted && l.department_id.errors }" placeholder="---Select---"
-                                        optionLabel="department_name" optionValue="department_id" [showClear]="true" [filter]="true" filterBy="department_name"></p-dropdown>
-
-                            <div *ngIf="submitted &&l.department_id.errors" class="invalid-feedback">
-                                <small *ngIf="l.department_id.errors.required" class="p-error">Department is required</small>
-                            </div>
+                <p-table #dt1 [value]="supplierinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedsupplierinfo" dataKey="SupplierId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
+                         [globalFilterFields]="['SupplierCode','LegalName']">
+                    <ng-template pTemplate="caption">
+                        <div class="flex">
+                            <span class="p-input-icon-left ml-auto">
+                                <i class="pi pi-search"></i>
+                                <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')" placeholder="Search by Any" />
+                            </span>
                         </div>
-                        <div class="field md:col-3">
-                            <label pTooltip="Employee" tooltipPosition="top">Employee<span class="req">*</span></label>
-                            <p-dropdown [options]="allEmployee" formControlName="employee_id" [ngClass]="{ 'is-invalid': submitted && l.employee_id.errors }" placeholder="---Select---"
-                                        optionLabel="employee_name" optionValue="employee_id" [showClear]="true" [filter]="true" filterBy="employee_name"></p-dropdown>
+                    </ng-template>
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th pSortableColumn="Code">
+                                Supplier Code
+                                <p-columnFilter type="text" field="SupplierCode" display="menu"></p-columnFilter>
+                                <p-sortIcon field="Code"></p-sortIcon>
+                            </th>
+                            <th pSortableColumn="LegalName">
+                                Supplier Name
+                                <p-columnFilter type="text" field="LegalName" display="menu"></p-columnFilter>
+                            </th>
+                            <th pSortableColumn="MobileNo">Short Name</th>
+                            <th pSortableColumn="MobileNo">Mobile No</th>
+                            <th pSortableColumn="Email">Email</th>
+                            <th>Action</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-supplierinfo let-rowData let-columns="columns">
+                        <tr [pSelectableRow]="supplierinfo">
+                            <td>{{supplierinfo.SupplierCode}}</td>
+                            <td>{{supplierinfo.LegalName}}</td>
+                            <td>{{supplierinfo.ShortName}}</td>
+                            <td>{{supplierinfo.MobileNo}}</td>
+                            <td>{{supplierinfo.Email}}</td>
+                            <td> <button class="pi pi-pencil risBtn risView mr-2" (click)="viewDocumentinfo(rowIndex,supplierinfo)"> View </button></td>
+                        </tr>
+                    </ng-template>
+                </p-table>
 
-                            <div *ngIf="submitted && l.employee_id.errors" class="invalid-feedback">
-                                <small *ngIf="l.employee_id.errors.required" class="p-error">Employee is required</small>
-                            </div>
-                        </div>
-                        <div class="field md:col-1">
-                            <button pButton pRipple type="button" label="Assign" class="risBtnAssign risAssign mr-2 mb-2" icon="pi pi-plus"></button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-
+                <!--end grid display -------------->
+            </div>
         </div>
     </div>
 </div>
