dealer verification save done

--- a/WebApp/src/app/features/party/dealerlist/dealerlist.component.html
+++ b/WebApp/src/app/features/party/dealerlist/dealerlist.component.html
@@ -5,9 +5,9 @@
 
             <!--end form display------------->
             <div [hidden]="gridDisplay">
-                <p-table #dt [value]="dealerinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                <p-table #dt [value]="dealerinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" selectionMode="single" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selecteddealerinfo" dataKey="DealerInfoId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                         [rowsPerPageOptions]="[10,25,50]" [globalFilterFields]="['DealerInfoCode','DealerInfoName']">
+                         [rowsPerPageOptions]="[10,25,50]" [globalFilterFields]="['DealerInfoCode','DealerInfoName']"(onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
                     <ng-template pTemplate="caption">
                         <div class="flex">
                             <span class="p-input-icon-left ml-auto">
@@ -36,11 +36,11 @@
                             <th>Status</th>
                         </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-dealerinfo let-rowData let-columns="columns">
+                    <ng-template pTemplate="body" let-dealerinfo let-rowData>
                         <tr [pSelectableRow]="dealerinfo">
                             <td hidden>{{dealerinfo.DealerInfoId}}</td>
                             <td>
-                                <p-tableCheckbox [value]="dealerinfo"></p-tableCheckbox>
+                                <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
                             </td>
                             <td>{{dealerinfo.DealerInfoCode}}</td>
                             <td>{{dealerinfo.DealerInfoName}}</td>
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="field md:col-1">
-                            <button pButton pRipple type="button" label="Assign" class="risBtnAssign risAssign mr-2 mb-2" icon="pi pi-plus"></button>
+                            <button pButton pRipple type="button" (click)="SaveDealerVerification()" label="Assign" class="risBtnAssign risAssign mr-2 mb-2" icon="pi pi-plus"></button>
                         </div>
                     </div>
                 </div>
